-
Bug
-
Resolution: Done
-
P5: Not important
-
None
-
4.7.0
-
Windows 7 x64; Qt 4.7.0
-
Ifa826ac8f2bf28225572e0c664f18ffa5e78c302
In Assistant the following 2 events are listed: QEvent::EnterEditFocus and QEvent::LeaveEditFocus,
but according to msvc they aren't members of QEvent.
For Gerrit Dashboard: QTBUG-15631 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
31638,1 | Document QEvent::EnterEditFocus and QEvent::LeaveEditFocus properly. | master | qt/qtbase | Status: MERGED | +2 | 0 |